--- a/ghostty/config
+++ b/ghostty/config
@@ -1,1 +1,21 @@
+theme = "Monokai Pro"
 
+title = " "
+
+font-family = Berkeley Mono
+font-style = Regular
+font-size = 16
+font-thicken = true
+
+cursor-style = block
+cursor-style-blink = true
+
+mouse-hide-while-typing = true
+
+clipboard-read = allow
+clipboard-write = allow
+clipboard-paste-protection = false
+clipboard-paste-bracketed-safe = true
+copy-on-select = clipboard
+
+quit-after-last-window-closed = false
