--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -33,6 +33,16 @@ setw -g pane-base-index 1
 # Renumber windows when one is clodes
 set -g renumber-windows on
 
-
 # Don't change window name automatically
 set-option -g allow-rename off
+
+
+
+# Vim-like pane switching
+bind -r ^ last-window
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
+
+
